# vic

./: .gitignore  IC_MotionDetection.py  README.md  README_VIC.txt  vic_design_r1.tex  vic_develProccess_implementation.aux  vic_develProccess_implementation.out  vic_develProccess_implementation.tex  vic_develProccess_implementation.toc  vic_develProcess_implementation.tex  vic_draft_component_design.tex  vic_draft_hazard_analysis.tex  vic_draft_sys_design.lof  vic_draft_sys_design.tex  vic_draft_sys_require.lof  vic_draft_sys_require.tex  vic_draft_sys_require_v.tex  vic_project_goals.aux  vic_project_goals.tex  vic_project_goals.toc  vic_proof_concept.tex  vic_v&v_r0.tex
Presentation/: Vehicle Intersection Control Presentation.pptx  Vehicle-Intersection-Control-Presentation.pptx
Snippets/: IC_VideoCapture.py  carColourDetect.cpp
carCtrl/: CMakeLists.txt  blink.c  blink.h  carComms.c  carComms.cpp  carComms.h  carCtrl.cpp  car_ctrl.cpp  car_ctrl.h  laneDetect.cpp  laneDetect.h  pid.cpp  pid.h  vehicle_navigation.cpp  vehicle_navigation.h  vic_types.h
carCtrl/vichw/: hwtest.c  motor_speed_controller.c  motor_speed_controller.cpp  motor_speed_controller.h  servo_controller.c  servo_controller.cpp  servo_controller.h  ultrasonic.cpp  ultrasonic.h  vic_hardware.c  vic_hardware.cpp  vic_hardware.h
docs/: vic_develProcess_implementation.tex  vic_draft_component_design.tex  vic_draft_hazard_analysis.tex  vic_draft_sys_design.tex  vic_project_goals.tex  vic_proof_concept.tex
figures/: CarCtrl_ContextDiag.xml  IC_ContextDiagram.xml  function_decomp_IC  function_decomp_track_n
icCtrl/: CDC.py  Car.py  ColorDetection.py  Communication.py  Communication1.py  IC_Main.py  IC_Main1.py  TrafficController.py  VehicleDetection.py  vi_IC_controller.py
icCtrl/Test/: 8_client_server.py
imgProc/: CMakeLists.txt  carCtrl.cpp  carCtrl.h  laneDetect.cpp  laneDetect.h
vicPrototype/Bluetooth/: MyDiscoveryListener.java
vicSim/src/vicSim/: Car.java  IntersectionCtrl.java  simulationGUI.java
vichw/: motor_speed_controller.c  servo_controller.c  servo_controller.h
